--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ file.wav
 src/.env
 src/google_tools/credentials.json
 src/google_tools/token.pickle
+service-account.json
 __pycache__/
 token.pickle
 *.pyc
